--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="images/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flávio Lima</title>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,400&family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
